--- a/web/index.html
+++ b/web/index.html
@@ -113,7 +113,7 @@
         </article>
         <article class="card">
           <h3>3) Show in your GitHub PR</h3>
-          <p>Push as usual — the note follows your commit, tiny Github Action verifies it in few seconds, and making the tests result visible to reviewers.</p>
+          <p>Push as usual — the note follows your commit, tiny Github Action verifies it (in few seconds) and makes the tests result visible to reviewers.</p>
         </article>
       </section>
 
