Update web footer

--- a/web/index.html
+++ b/web/index.html
@@ -129,7 +129,7 @@ gem 'gotsha'</code></pre>
       </section>
           -->
 
-      <p class="foot">© <span id="y"></span> Vítek Meloun</p>
+      <p class="foot">© <span id="y"></span> <a href="mailto:vitek@meloun.info">Vítek Meloun</a></p>
     </main>
   </div>
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
